<resources>
    <string name="app_name" translatable="false">MisurApp</string>
    <string name="action_cambio_lingua">Cambia Lingua</string>
    <string name="action_ripristino">Ripristino</string>

    <string name="lingua_italiana">Italiano</string>
    <string name="lingua_inglese">Inglese</string>
    <string name="lingua_spagnola">Spagnolo</string>


    <string name="utente_boyscout">Boyscout</string>
    <string name="utente_caposcout">Caposcout</string>

    <string name="categoria_posizione">Posizione</string>
    <string name="categoria_movimento">Movimento</string>
    <string name="categoria_ambiente">Ambiente</string>

    <string name="avviso_non_supportato">Non Supportato</string>

    <string name="strumento_bussola">Bussola</string>
    <string name="strumento_contapassi">Contapassi</string>
    <string name="strumento_termometro">Termometro</string>
    <string name="strumento_barometro">Barometro</string>
    <string name="strumento_altimetro">Altimetro</string>

    <string name="salvato">Salvato</string>
    <string name="cancellato">Cancellato</string>
    <string name="noValue">Nessun valore salvato</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <string name="LoginRequest">Login necessario per procedere</string>
    <string name="LoginComplete">Login effettuato con successo</string>
    <string name="LogoutComplete">Logout completato con successo</string>
    <string name="logout">Disconnettersi</string>

    <string name="dialog_annulla">Annulla</string>
    <string name="title_paired_devices">Dispositivi accoppiati</string>
    <string name="title_other_devices">Dispositivi trovati:</string>
    <string name="button_scan">Scansiona</string>
    <string name="none_paired">Nessun dispositivo accoppiato</string>
    <string name="scanning">Sto cercando</string>
    <string name="select_device">Seleziona dispositivo</string>
    <string name="none_found">Non trovato</string>

    <plurals name="numberOfSteps">
        <item quantity="one">%d passo</item>
        <item quantity="other">%d passi</item>
    </plurals>
    <string name="strumento_fotometro">Fotometro</string>
    <string name="strumento_igrometro">Igrometro</string>

    <string name="conferma_invio_dati">Sei sicuro di voler inviare i dati a:</string>
    <string name="Si">Sì</string>
    <string name="No">No</string>

    <string name="Azzera">Azzera</string>
    <string name="mail" translatable="false">E-mail</string>
    <string name="data">Data</string>
    <string name="strumento">Strumento</string>
    <string name="misura">Misura</string>

    <string name="conferma_google_drive">Vuoi salvare le misure su Google Drive?</string>

    <string name="bluetoothNotAvailable">Bluetooth non disponibile</string>
    <string name="not_connected">Non collegato</string>
    <string name="loginNotSucceded">Login non riuscito</string>
    <string name="no_data">Nessun dato da inviare</string>
    <string name="connectionFailed">Connessione fallita</string>
    <string name="connectionLost">Connessione persa</string>
    <string name="connected">Connesso</string>
    <string name="connecting">Connessione in corso</string>
    <string name="listen">In attesa di connessione</string>
    <string name="connectedTo">Connesso con</string>
    <string name="dataDownload">Ricezione dati..</string>
    <string name="dataSendComplete">Invio dati riuscito</string>
    <string name="newData">Nuovi dati ricevuti</string>
    <string name="disconnected">Disconnesso</string>
    <string name="disconnecting">Disconnessione in corso</string>
    <string name="bluetoothNeeded">Bluetooth deve essere attivo per poter scambiare dati</string>
    <string name="discoverableNeeded">Attenzione, così facendo non sarai visibile a nuovi dispositivi, vuoi andare avanti senza rendere il dispositivo visibile?</string>
    <string name="position_permission_needed">Per poter cercare i dispositivi nelle vicinanze è necessario concedere i permessi per la posizione</string>

    <string name="altitude_textViewContent" translatable="false">%.2f m</string>
    <string name="barometer_textViewContent" translatable="false">%.2f hPa</string>
    <string name="compass_textViewContent" translatable="false">%d %2$s</string>
    <string name="hygrometer_textViewContent" translatable="false">%.2f %%</string>
    <string name="light_textViewContent" translatable="false">%.0f lx</string>
    <string name="step_textViewContent" translatable="false">%.2f %2$s</string>
    <string name="thermometer_textViewContent" translatable="false">%.2f °C</string>
    <string name="position_permission_not_given">Senza concedere i permessi non è possibile utilizzare la connessione bluetooth per scambiare dati. Premere OK per tornare alla schermata precedente</string>
    <string name="conferma_ripristino"> Vuoi ripristinare le misure dell\'ultimo salvataggio fatte sul tuo Google Drive? </string>
    <string name="misure_ripristinate"> Le misure sono state ripristinate </string>
    <string name="nessuna_misura_da_ripristinare"> Nessuna misura trovata da ripristinare </string>
    <string name="nessuna_misura_nel_file"> Nessuna misura trovata </string>
    <string name="testo_progress_bar"> Attendere prego... </string>
    <string name="success_salvataggio_drive"> Le misure sono state salvate correttamente su Google Drive</string>
    <string name="nessuna_misura_da_salvare"> Non hai misure da salvare</string>
    <string name="no_internet_connection">Nessuna connessione ad intenet</string>

</resources>


